<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_0">

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_lg"
        android:paddingTop="@dimen/spacing_xl"
        android:paddingBottom="@dimen/spacing_md">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/screen_builder"
            android:textColor="@color/ink"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium" />

        <ImageButton
            android:id="@+id/btn_save_journey"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_save"
            android:background="@drawable/bg_icon_btn"
            android:contentDescription="@string/action_save" />

    </RelativeLayout>

    <!-- Timeline bar -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_lg"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/timeline_bar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <!-- Segment list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/segment_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/spacing_lg"
        android:paddingVertical="@dimen/spacing_md"
        android:clipToPadding="false" />

    <!-- Add segment button -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="@dimen/spacing_lg"
        android:layout_marginBottom="@dimen/spacing_md"
        android:background="@drawable/bg_add_segment">

        <TextView
            android:id="@+id/btn_add_segment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/builder_add_segment"
            android:textColor="@color/ink_dim"
            android:textSize="14sp"
            android:drawableStart="@drawable/ic_plus"
            android:drawablePadding="@dimen/spacing_sm" />

    </FrameLayout>

</LinearLayout>
